--- a/lib/src/components/login_component/login_component.html
+++ b/lib/src/components/login_component/login_component.html
@@ -31,7 +31,10 @@
               </div>
               <div class="form-group">
                 <div class="form-check">
-                  <input type="checkbox" class="form-check-input" id="dropdownCheck2">
+                  <input type="checkbox" class="form-check-input" id="dropdownCheck2"
+                  
+                  
+                  >
                   <label class="form-check-label" for="dropdownCheck2">
                     Mantenha-me Conectado
                   </label>
