--- a/lib/src/components/navbar_component/navbar_component.html
+++ b/lib/src/components/navbar_component/navbar_component.html
@@ -6,6 +6,6 @@
     (keyup)="PesquisarCarro(termoPesquisa.value)"
     (change)="PesquisarCarro(termoPesquisa.value)"
     >
-    <i id="icone-exit" class="fa fa-sign-out text-light" aria-hidden="true" (click)="Login()"></i>
+    <i id="icone-exit" class="fa fa-sign-out text-light" aria-hidden="true" (click)="Sair()"></i>
   </form>
 </nav>
